# Battleship

./: CMakeLists.txt  grid.c  grid.h  main.c  menu.c  menu.h  missiles.c  missiles.h  save.c  save.h  saveGame.txt  structures.h  verifications.c  verifications.h
src/: CMakeLists.txt  Makefile  grid.c  grid.h  main.c  menu.c  menu.h  missiles.c  missiles.h  save.c  save.h  structures.h  verifications.c  verifications.h
